--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <!--Đây là ảnh url-->
         <img src = "https://28tech.com.vn/" alt = "28tech">
         <!--Đây là ảnh local-->
-        <img src = "images/28tech.png" alt = "28tech">
+        <img src = "28tech.png" alt = "28tech">
     </p>
 </body>
 </html>
+
