--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
     </p>
     
     <h2>Ví dụ 3: Chèn ảnh</h2>
-    <p>
-        <!--Đây là ảnh url-->
-        <img src = "https://28tech.com.vn/" alt = "28tech">
-        <!--Đây là ảnh local-->
-        <img src = "28tech.png" alt = "28tech">
-    </p>
+    <a href="https://28tech.com.vn/" target="_blank">
+        <img src="https://cdn-main.28tech.com.vn/media/anh-khoa-hoc/front-end.png" width="500px" alt="28Tech">
+    </a>
+<!--Bảo Anh tự code, no gpt here-->
 </body>
 </html>
+
 
